# ferrous-waves

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deployment.yaml  file1  ingress.yaml  pom.xml
.github/workflows/: ci.yml
benches/: fft_benchmark.rs  stft_benchmark.rs  temporal_benchmark.rs
docs/: design.md  guide.md
examples/: README.md  basic_analysis.rs  batch_processing.rs  cached_analysis.rs  compare_files.rs  content_classification.rs  cpu_features.rs  envelope_visualization.rs  fingerprint_similarity.rs  generate_samples.rs  mcp_client.rs  musical_analysis.rs  onset_detection.rs  perceptual_analysis.rs  pitch_detection.rs  quality_assessment.rs  segment_analysis.rs  spectral_analysis.rs
src/: lib.rs  main.rs
src/analysis/: classification.rs  engine.rs  fingerprint.rs  mod.rs  musical.rs  perceptual.rs  quality.rs  segments.rs
src/analysis/features/: mod.rs
src/analysis/pitch/: mod.rs  pyin.rs  vibrato.rs  yin.rs
src/analysis/spectral/: cpu_features.rs  fft.rs  mel.rs  mod.rs  simd_fft.rs  stft.rs  window.rs
src/analysis/temporal/: beat.rs  mod.rs  onset.rs
src/audio/: buffer.rs  decoder.rs  formats.rs  mod.rs
src/cache/: key.rs  mod.rs  storage.rs
src/cli/: commands.rs  mod.rs
src/mcp/: handlers.rs  mod.rs  server.rs  tools.rs
src/utils/: config.rs  error.rs
src/visualization/: mod.rs  renderer.rs  spectrogram.rs  waveform.rs
tests/: audio_tests.rs  cache_tests.rs  envelope_test.rs  error_tests.rs  fft_tests.rs  integration_analysis.rs  integration_cli.rs  integration_tests.rs  mel_tests.rs  pitch_detection_test.rs  stft_tests.rs  temporal_tests.rs  visualization_tests.rs
