[package]
name = "ferrous-waves"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Brandon Williams <brandon@example.com>"]
description = "High-fidelity audio analysis bridge for development workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/willibrandon/ferrous-waves"
keywords = ["audio", "analysis", "mcp", "fft", "visualization"]
categories = ["multimedia::audio", "science", "visualization"]

[dependencies]
# Audio processing
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
rustfft = "6.1"
num-complex = "0.4"
apodize = "1.0"
ndarray = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# MCP SDK
rmcp = { version = "0.2.0", features = ["server", "transport-io"] }
rmcp-macros = "0.2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Visualization
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series"] }
image = "0.24"
base64 = "0.21"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
